# LLVM_thoughts

./: CMakeLists.txt  Environment.h  EvaLLVM.h  Logger.h  eva-llvm.cpp  test.cpp
parser/: EvaGrammar.bnf  EvaGrammar.h
